--- a/module_0/module_0.ipynb
+++ b/module_0/module_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,9 @@
     "\n",
     "\n",
     "def game_core_v3(number):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Используем метод половинного деления\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    \n",
     "    count = 1\n",
     "    min_value_local = min_value\n",
@@ -35,17 +35,17 @@
     "        \n",
     "        predict = middle(min_value_local, max_value_local)\n",
     "        \n",
-    "    return(count)   "
+    "    return count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def score_game(game_core):\n",
-    "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
+    "    \"\"\"Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число\"\"\"\n",
     "    count_ls = []\n",
     "    np.random.seed(1)  # фиксируем RANDOM SEED, чтобы ваш эксперимент был воспроизводим!\n",
     "    random_array = np.random.randint(min_value,max_value, size=(1000))\n",
@@ -53,12 +53,12 @@
     "        count_ls.append(game_core(number))\n",
     "    score = int(np.mean(count_ls))\n",
     "    print(f\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
-    "    return(score)"
+    "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,11 +70,9 @@
     },
     {
      "data": {
-      "text/plain": [
-       "5"
-      ]
+      "text/plain": "5"
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
