Проект 1. Кто хочет стать миллионером

--- a/skillfactory_rds/module_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/skillfactory_rds/module_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -16,17 +16,13 @@
     "from collections import Counter\n",
     "print(os.listdir(\"../input\"))"
    ],
-   "execution_count": 2,
+   "execution_count": 52,
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../input'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-2-be9f4b4e76a2>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mcollections\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mCounter\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 7\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlistdir\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"../input\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      8\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../input'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['imbd-sf']\n"
      ]
     }
    ]
@@ -40,8 +36,18 @@
     "data = pd.read_csv('../input/imbd-sf/data.csv')\n",
     "data.head(5)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 53,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     imdb_id  popularity     budget     revenue                original_title  \\\n0  tt0369610   32.985763  150000000  1513528810                Jurassic World   \n1  tt1392190   28.419936  150000000   378436354            Mad Max: Fury Road   \n2  tt2908446   13.112507  110000000   295238201                     Insurgent   \n3  tt2488496   11.173104  200000000  2068178225  Star Wars: The Force Awakens   \n4  tt2820852    9.335014  190000000  1506249360                     Furious 7   \n\n                                                cast          director  \\\n0  Chris Pratt|Bryce Dallas Howard|Irrfan Khan|Vi...   Colin Trevorrow   \n1  Tom Hardy|Charlize Theron|Hugh Keays-Byrne|Nic...     George Miller   \n2  Shailene Woodley|Theo James|Kate Winslet|Ansel...  Robert Schwentke   \n3  Harrison Ford|Mark Hamill|Carrie Fisher|Adam D...       J.J. Abrams   \n4  Vin Diesel|Paul Walker|Jason Statham|Michelle ...         James Wan   \n\n                         tagline  \\\n0              The park is open.   \n1             What a Lovely Day.   \n2     One Choice Can Destroy You   \n3  Every generation has a story.   \n4            Vengeance Hits Home   \n\n                                            overview  runtime  \\\n0  Twenty-two years after the events of Jurassic ...      124   \n1  An apocalyptic story set in the furthest reach...      120   \n2  Beatrice Prior must confront her inner demons ...      119   \n3  Thirty years after defeating the Galactic Empi...      136   \n4  Deckard Shaw seeks revenge against Dominic Tor...      137   \n\n                                      genres  \\\n0  Action|Adventure|Science Fiction|Thriller   \n1  Action|Adventure|Science Fiction|Thriller   \n2         Adventure|Science Fiction|Thriller   \n3   Action|Adventure|Science Fiction|Fantasy   \n4                      Action|Crime|Thriller   \n\n                                production_companies release_date  vote_count  \\\n0  Universal Studios|Amblin Entertainment|Legenda...     6/9/2015        5562   \n1  Village Roadshow Pictures|Kennedy Miller Produ...    5/13/2015        6185   \n2  Summit Entertainment|Mandeville Films|Red Wago...    3/18/2015        2480   \n3          Lucasfilm|Truenorth Productions|Bad Robot   12/15/2015        5292   \n4  Universal Pictures|Original Film|Media Rights ...     4/1/2015        2947   \n\n   vote_average  release_year  \n0           6.5          2015  \n1           7.1          2015  \n2           6.3          2015  \n3           7.5          2015  \n4           7.3          2015  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>imdb_id</th>\n      <th>popularity</th>\n      <th>budget</th>\n      <th>revenue</th>\n      <th>original_title</th>\n      <th>cast</th>\n      <th>director</th>\n      <th>tagline</th>\n      <th>overview</th>\n      <th>runtime</th>\n      <th>genres</th>\n      <th>production_companies</th>\n      <th>release_date</th>\n      <th>vote_count</th>\n      <th>vote_average</th>\n      <th>release_year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>tt0369610</td>\n      <td>32.985763</td>\n      <td>150000000</td>\n      <td>1513528810</td>\n      <td>Jurassic World</td>\n      <td>Chris Pratt|Bryce Dallas Howard|Irrfan Khan|Vi...</td>\n      <td>Colin Trevorrow</td>\n      <td>The park is open.</td>\n      <td>Twenty-two years after the events of Jurassic ...</td>\n      <td>124</td>\n      <td>Action|Adventure|Science Fiction|Thriller</td>\n      <td>Universal Studios|Amblin Entertainment|Legenda...</td>\n      <td>6/9/2015</td>\n      <td>5562</td>\n      <td>6.5</td>\n      <td>2015</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tt1392190</td>\n      <td>28.419936</td>\n      <td>150000000</td>\n      <td>378436354</td>\n      <td>Mad Max: Fury Road</td>\n      <td>Tom Hardy|Charlize Theron|Hugh Keays-Byrne|Nic...</td>\n      <td>George Miller</td>\n      <td>What a Lovely Day.</td>\n      <td>An apocalyptic story set in the furthest reach...</td>\n      <td>120</td>\n      <td>Action|Adventure|Science Fiction|Thriller</td>\n      <td>Village Roadshow Pictures|Kennedy Miller Produ...</td>\n      <td>5/13/2015</td>\n      <td>6185</td>\n      <td>7.1</td>\n      <td>2015</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>tt2908446</td>\n      <td>13.112507</td>\n      <td>110000000</td>\n      <td>295238201</td>\n      <td>Insurgent</td>\n      <td>Shailene Woodley|Theo James|Kate Winslet|Ansel...</td>\n      <td>Robert Schwentke</td>\n      <td>One Choice Can Destroy You</td>\n      <td>Beatrice Prior must confront her inner demons ...</td>\n      <td>119</td>\n      <td>Adventure|Science Fiction|Thriller</td>\n      <td>Summit Entertainment|Mandeville Films|Red Wago...</td>\n      <td>3/18/2015</td>\n      <td>2480</td>\n      <td>6.3</td>\n      <td>2015</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>tt2488496</td>\n      <td>11.173104</td>\n      <td>200000000</td>\n      <td>2068178225</td>\n      <td>Star Wars: The Force Awakens</td>\n      <td>Harrison Ford|Mark Hamill|Carrie Fisher|Adam D...</td>\n      <td>J.J. Abrams</td>\n      <td>Every generation has a story.</td>\n      <td>Thirty years after defeating the Galactic Empi...</td>\n      <td>136</td>\n      <td>Action|Adventure|Science Fiction|Fantasy</td>\n      <td>Lucasfilm|Truenorth Productions|Bad Robot</td>\n      <td>12/15/2015</td>\n      <td>5292</td>\n      <td>7.5</td>\n      <td>2015</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>tt2820852</td>\n      <td>9.335014</td>\n      <td>190000000</td>\n      <td>1506249360</td>\n      <td>Furious 7</td>\n      <td>Vin Diesel|Paul Walker|Jason Statham|Michelle ...</td>\n      <td>James Wan</td>\n      <td>Vengeance Hits Home</td>\n      <td>Deckard Shaw seeks revenge against Dominic Tor...</td>\n      <td>137</td>\n      <td>Action|Crime|Thriller</td>\n      <td>Universal Pictures|Original Film|Media Rights ...</td>\n      <td>4/1/2015</td>\n      <td>2947</td>\n      <td>7.3</td>\n      <td>2015</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
    "metadata": {
@@ -51,8 +57,17 @@
    "source": [
     "len(data)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 54,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1890"
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
    "metadata": {},
@@ -70,7 +85,7 @@
     "answer_ls = [] # создадим список с ответами. сюда будем добавлять ответы по мере прохождения теста\n",
     "# сюда можем вписать создание новых колонок в датасете"
    ],
-   "execution_count": null,
+   "execution_count": 55,
    "outputs": []
   },
   {
@@ -95,7 +110,7 @@
     "# тут вводим ваш ответ и добавлем в его список ответов (сейчас для примера стоит \"1\")\n",
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 56,
    "outputs": []
   },
   {
@@ -118,7 +133,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 57,
    "outputs": []
   },
   {
@@ -143,7 +158,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 58,
    "outputs": []
   },
   {
@@ -168,7 +183,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 59,
    "outputs": []
   },
   {
@@ -194,7 +209,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 60,
    "outputs": []
   },
   {
@@ -218,7 +233,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 61,
    "outputs": []
   },
   {
@@ -242,7 +257,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 62,
    "outputs": []
   },
   {
@@ -266,7 +281,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 63,
    "outputs": []
   },
   {
@@ -290,7 +305,7 @@
    "source": [
     "answer_ls.append(4)"
    ],
-   "execution_count": null,
+   "execution_count": 64,
    "outputs": []
   },
   {
@@ -314,7 +329,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 65,
    "outputs": []
   },
   {
@@ -338,7 +353,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 66,
    "outputs": []
   },
   {
@@ -362,7 +377,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 67,
    "outputs": []
   },
   {
@@ -386,7 +401,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 68,
    "outputs": []
   },
   {
@@ -410,7 +425,7 @@
    "source": [
     "answer_ls.append(4)"
    ],
-   "execution_count": null,
+   "execution_count": 69,
    "outputs": []
   },
   {
@@ -435,7 +450,7 @@
     "\n",
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 70,
    "outputs": []
   },
   {
@@ -459,7 +474,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 71,
    "outputs": []
   },
   {
@@ -483,7 +498,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 72,
    "outputs": []
   },
   {
@@ -507,7 +522,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 73,
    "outputs": []
   },
   {
@@ -531,7 +546,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 74,
    "outputs": []
   },
   {
@@ -555,7 +570,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 75,
    "outputs": []
   },
   {
@@ -579,7 +594,7 @@
    "source": [
     "answer_ls.append(4)"
    ],
-   "execution_count": null,
+   "execution_count": 76,
    "outputs": []
   },
   {
@@ -603,7 +618,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 77,
    "outputs": []
   },
   {
@@ -627,7 +642,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 78,
    "outputs": []
   },
   {
@@ -652,7 +667,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 79,
    "outputs": []
   },
   {
@@ -676,7 +691,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 80,
    "outputs": []
   },
   {
@@ -700,7 +715,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 81,
    "outputs": []
   },
   {
@@ -724,7 +739,7 @@
    "source": [
     "answer_ls.append(4)"
    ],
-   "execution_count": null,
+   "execution_count": 82,
    "outputs": []
   },
   {
@@ -748,7 +763,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 83,
    "outputs": []
   },
   {
@@ -772,7 +787,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 84,
    "outputs": []
   },
   {
@@ -796,7 +811,7 @@
    "source": [
     "answer_ls.append(3)"
    ],
-   "execution_count": null,
+   "execution_count": 85,
    "outputs": []
   },
   {
@@ -820,7 +835,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 86,
    "outputs": []
   },
   {
@@ -844,7 +859,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 87,
    "outputs": []
   },
   {
@@ -868,7 +883,7 @@
    "source": [
     "answer_ls.append(2)"
    ],
-   "execution_count": null,
+   "execution_count": 88,
    "outputs": []
   },
   {
@@ -891,7 +906,7 @@
    "source": [
     "answer_ls.append(1)"
    ],
-   "execution_count": null,
+   "execution_count": 89,
    "outputs": []
   },
   {
@@ -915,7 +930,7 @@
    "source": [
     "answer_ls.append(5)"
    ],
-   "execution_count": null,
+   "execution_count": 90,
    "outputs": []
   },
   {
@@ -939,7 +954,7 @@
    "source": [
     "answer_ls.append(4)"
    ],
-   "execution_count": null,
+   "execution_count": 91,
    "outputs": []
   },
   {
@@ -953,8 +968,17 @@
    },
    "cell_type": "code",
    "source": "len(answer_ls)",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 92,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "36"
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
    "metadata": {
@@ -962,8 +986,18 @@
    },
    "cell_type": "code",
    "source": "pd.DataFrame({'Id':range(1,len(answer_ls)+1), 'Answer':answer_ls}, columns=['Id', 'Answer'])",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 93,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    Id  Answer\n0    1       5\n1    2       2\n2    3       3\n3    4       2\n4    5       1\n5    6       5\n6    7       2\n7    8       1\n8    9       4\n9   10       5\n10  11       3\n11  12       1\n12  13       2\n13  14       4\n14  15       5\n15  16       1\n16  17       3\n17  18       3\n18  19       2\n19  20       1\n20  21       4\n21  22       1\n22  23       3\n23  24       1\n24  25       1\n25  26       1\n26  27       4\n27  28       2\n28  29       5\n29  30       3\n30  31       5\n31  32       5\n32  33       2\n33  34       1\n34  35       5\n35  36       4",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Id</th>\n      <th>Answer</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>11</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>12</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>13</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>14</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>15</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>16</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>17</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>18</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>19</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>20</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>21</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>22</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>23</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>24</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>25</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>26</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>27</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>28</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>29</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>30</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>31</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>32</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>33</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>34</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>35</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>36</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
    "metadata": {
@@ -971,7 +1005,7 @@
    },
    "cell_type": "code",
    "source": "",
-   "execution_count": null,
+   "execution_count": 93,
    "outputs": []
   }
  ],
